Increase permsize for tests