@@ -21,6 +21,10 @@ repositories {
     jcenter()
 }
 
+test {
+    jvmArgs "-XX:MaxPermSize=256m"
+}
+
 jacocoTestReport {
     reports {
         xml.enabled = true // coveralls plugin depends on xml format report
